# radiologist-api

./: README.md  main.py  pyproject.toml
report_generator/: generator.py
report_generator/models/: AttModel.py  Transformer.py  __init__.py  lamrg.py  text_encoder.py  tokenizers.py  utils.py  visual_extractor.py
server/: conf.py  server.py
server/rgen/: rgen.proto  rgen_pb2.py  rgen_pb2.pyi  rgen_pb2_grpc.py
